--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <><link rel="stylesheet" href="css/custom.css">
 </head>
 <body>
-    
+    <p>
+        Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born
+    </p>
+    <><button onclick="main()"></button>
 </body>
 </html>
