--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born
     </p>
     <button onclick="main()">Click here to see your Ghanian Name ! </button>
+
+    <p id="output"> </p>
+    
     <script src="js/main.js"></script>
 </body>
 </html>
