--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     </p>
     <button onclick="main()">Click here to see your Ghanian Name ! </button>
 
-    <p id="output"> </p>
-    
+    <p id="output" class=".ghanaian-name">This is  the output</p>
+
     <script src="js/main.js"></script>
 </body>
 </html>
