--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </p>
     <button onclick="main()">Click here to see your Ghanian Name ! </button>
 
-    <p id="output" class=".ghanaian-name">This is  the output</p>
+    <p id="output">Are you ready to learn your Akan name ? Don not flinch &#128526 </p>
 
     <script src="js/main.js"></script>
 </body>
