--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="css/custom.css">
 </head>
+<h1> Akan Names Generator </h1>
 <body>
+    <h3>What are Akan Names ?</h3>
+    <p>
+        Akan Names Generator is web application that takes a user's birthday and calculates the day of the week they were born and then depending on their gender outputs their Akan Name. 
+    </p>
+
+    <h3>What are Akan Names ?</h3>
+    
     <p>
         Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born
     </p>
