--- a/index.html
+++ b/index.html
@@ -4,27 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Akan Names Generator</title>
     <link rel="stylesheet" href="<!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="css/custom.css">
 </head>
 <h1> Akan Names Generator </h1>
 <body>
-    <h3>What are Akan Names ?</h3>
-    <p>
-        Akan Names Generator is web application that takes a user's birthday and calculates the day of the week they were born and then depending on their gender outputs their Akan Name. 
-    </p>
+    <div>
 
-    <h3>What are Akan Names ?</h3>
+        <h3>About Us</h3>
+        <p>
+            Akan Names Generator is web application that takes a user's birthday and calculates the day of the week they were born and then depending on their gender outputs their Akan Name. 
+        </p>
+        <h3>What are Akan Names ?</h3>
+        <p>
+            Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born
+        </p>
+    </div>
+    <div>
+        <button onclick="main()">Click here to see your Ghanian Name ! </button>
+
+        <p id="output">Are you ready to learn your Akan name ? Don not flinch &#128526 </p>
     
-    <p>
-        Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born
-    </p>
-    <button onclick="main()">Click here to see your Ghanian Name ! </button>
+        <script src="js/main.js"></script>
+    </div>
 
-    <p id="output">Are you ready to learn your Akan name ? Don not flinch &#128526 </p>
-
-    <script src="js/main.js"></script>
 </body>
 </html>
