--- a/index.html
+++ b/index.html
@@ -7,19 +7,28 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="css/custom.css">
 </head>
-<h1> Akan Names Generator </h1>
+<center>
+    <h1> Akan Names Generator </h1>
+    <div class="jumbotron">
+        <center>
+            <h3>About Us</h3>
+        </center> 
+        <p>
+            Akan Names Generator is web application that takes a user's birthday and calculates the day of the week they were born and then depending on their gender outputs their Akan Name. 
+        </p>
+    </div>
+
+</center>
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-md-6">
+
+            <div class="col-md-6" >
                 <div>
                     <p>
                         <!-- Intentional formatting break -->
                     </p>
-                    <h3>About Us</h3>
-                    <p>
-                        Akan Names Generator is web application that takes a user's birthday and calculates the day of the week they were born and then depending on their gender outputs their Akan Name. 
-                    </p>
+
                     <h3>What are Akan Names ?</h3>
                     <p>
                         Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born
@@ -28,8 +37,13 @@
             </div>
 
             <div class="col-md-6">
+                <p>
+                    <!--Intentional formatting break  -->
+                    <!--Intentional formatting break  -->
+                </p>
+
                 <div>
-                    <button onclick="main()">Click here to see your Ghanian Name ! </button>
+                    <button onclick="main()">Click here, and check below to see your Ghanian Name ! </button>
                     <p>
                         <!--Intentional formatting break  -->
                     </p>
