--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
                 <h3>About Us</h3>
             </center> 
             <p>
-                Akan Names Generator is web application that takes a user's birthday and calculates the day of the week they were born and then depending on their gender outputs their equivalent Akan Name. 
+                Akan Names Generator is web application that takes a user's birthday and 
+                calculates the day of the week they were born and then depending on their 
+                gender outputs their equivalent Akan Name. 
             </p>
     </div>
 
@@ -28,7 +30,9 @@
 
                     <h3>What are Akan Names ?</h3>
                     <p>
-                        Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born.
+                        Akan names are derived from Ghanian culture. 
+                        Frequently in Ghana, children are given their first name as a 'day name' 
+                        which corresponds to the day in the week they were born.
                     </p>
                 </div>
             </div>
